// Risk Management Service - Assesses risk and validates strategies before execution
// Part of BLOASIS Phase 1 infrastructure for trading safety
//
// This service uses a LangGraph multi-agent workflow with 3 specialized risk analyzers:
// 1. Market Risk Analyzer - Evaluates exposure to market conditions and volatility
// 2. Portfolio Risk Analyzer - Assesses concentration, correlation, and position sizing
// 3. Drawdown Risk Analyzer - Analyzes potential downside based on backtest metrics
//
// A Risk Coordinator agent synthesizes the analyses and makes the final decision.
//
// Risk Score Interpretation:
// - 0-30: APPROVE - Strategy passes all risk checks, safe to execute
// - 30-70: ADJUST - Strategy has moderate risk, requires modifications
// - >70: REJECT - Strategy is too risky, should not be executed
//
// Dependencies:
// - AI Analysis Service (Tier 3): Provides strategy_id to assess
// - Backtesting Service: Provides backtest metrics (Sharpe, drawdown, win rate)
//
// The workflow uses Claude for complex risk reasoning and final decisions.

syntax = "proto3";

package bloasis.risk_management;

import "google/api/annotations.proto";
import "common.proto";

// RiskManagementService provides risk assessment for trading strategies
// Uses LangGraph multi-agent workflow with 3 risk analyzers + coordinator
service RiskManagementService {
  // AssessRisk evaluates a strategy's risk profile based on backtest metrics
  // and user profile to determine if it should be approved, adjusted, or rejected
  //
  // The workflow:
  // 1. Market Risk Analyzer evaluates market exposure and volatility risk
  // 2. Portfolio Risk Analyzer checks concentration and correlation risks
  // 3. Drawdown Risk Analyzer assesses downside potential from backtest data
  // 4. Risk Coordinator synthesizes analyses and makes final decision
  //
  // Risk Score Ranges:
  // - 0-30: APPROVE (safe to execute)
  // - 30-70: ADJUST (needs modifications, adjustments provided)
  // - >70: REJECT (too risky, should not execute)
  //
  // Note: This is a critical safety checkpoint before strategy execution
  // All strategies MUST pass risk assessment before live trading
  rpc AssessRisk(AssessRiskRequest) returns (AssessRiskResponse) {
    option (google.api.http) = {
      post: "/v1/risk-management/assess-risk"
      body: "*"
    };
  }
}

// AssessRiskRequest - Request parameters for strategy risk assessment
message AssessRiskRequest {
  // Unique identifier of the strategy to assess
  // Typically generated by AI Analysis Service (Tier 3)
  // Format: "strategy_{user_id}_{timestamp}"
  string strategy_id = 1;

  // User identifier who owns this strategy
  // Used for tracking, audit, and risk tolerance application
  string user_id = 2;

  // User's trading profile with risk preferences
  // Uses bloasis.common.UserProfile for consistent profile representation
  // The user's risk_tolerance (0.0-1.0) influences the risk score thresholds
  bloasis.common.UserProfile user_profile = 3;

  // Summary of backtest performance metrics
  // Used by risk analyzers to evaluate strategy viability
  // Must be obtained from Backtesting Service before calling
  BacktestMetricsSummary backtest_metrics = 4;
}

// AssessRiskResponse - Risk assessment result with decision and feedback
message AssessRiskResponse {
  // Unique identifier for this assessment
  // Format: "assessment_{strategy_id}_{timestamp}"
  string assessment_id = 1;

  // Strategy identifier that was assessed
  // Matches the strategy_id from the request
  string strategy_id = 2;

  // Overall risk score from 0 to 100
  // Calculated as weighted combination of 3 risk analyzer scores
  // Score interpretation:
  // - 0-30: Low risk (APPROVE)
  // - 30-70: Moderate risk (ADJUST)
  // - >70: High risk (REJECT)
  double risk_score = 3;

  // Final risk decision:
  // - "APPROVE": Strategy is safe to execute as-is
  // - "ADJUST": Strategy requires modifications (see adjustments field)
  // - "REJECT": Strategy is too risky, should not be executed
  string decision = 4;

  // AI-generated explanation of the risk assessment
  // Provides reasoning from all 3 risk analyzers and the coordinator
  // Includes specific concerns and factors that influenced the decision
  string feedback = 5;

  // Suggested modifications if decision is "ADJUST"
  // Each string describes a specific change to reduce risk
  // Examples:
  // - "Reduce position size in TSLA from 20% to 10%"
  // - "Add stop-loss at 5% below entry price"
  // - "Diversify across more sectors"
  // Empty if decision is "APPROVE" or "REJECT"
  repeated string adjustments = 6;

  // ISO 8601 timestamp when this assessment was completed
  // Example: "2025-01-26T14:30:00Z"
  string timestamp = 7;
}

// BacktestMetricsSummary - Key performance metrics from backtesting
// Used by risk analyzers to evaluate strategy viability
// All percentage values are expressed as decimals (e.g., 0.15 = 15%)
message BacktestMetricsSummary {
  // Sharpe ratio - risk-adjusted return metric
  // Calculated as: (return - risk_free_rate) / standard_deviation
  // Higher values indicate better risk-adjusted performance
  // Typical interpretation: < 1 = subpar, 1-2 = good, > 2 = excellent
  // Risk impact: Low Sharpe ratio increases risk score
  double sharpe_ratio = 1;

  // Maximum drawdown percentage - largest peak-to-trough decline
  // Measures the worst historical loss from a peak
  // Example: 0.20 represents 20% max drawdown
  // Risk impact: High drawdown significantly increases risk score
  double max_drawdown = 2;

  // Win rate percentage - proportion of profitable trades
  // Calculated as: profitable_trades / total_trades
  // Example: 0.55 represents 55% win rate
  // Risk impact: Low win rate increases risk score
  double win_rate = 3;

  // Total return percentage over the backtest period
  // Calculated as: (final_value - initial_capital) / initial_capital
  // Example: 0.25 represents 25% total return
  // Risk impact: Negative return significantly increases risk score
  double total_return = 4;
}
